@@ -1,24 +1,7 @@
 # -*- coding: utf-8 -*-
-# Copyright (C) 2008-2010, Luis Pedro Coelho <lpc@cmu.edu>
+# Copyright (C) 2008-2011, Luis Pedro Coelho <luis@luispedro.org>
 # vim: set ts=4 sts=4 sw=4 expandtab smartindent:
-# 
-# Permission is hereby granted, free of charge, to any person obtaining a copy
-#  of this software and associated documentation files (the "Software"), to deal
-#  in the Software without restriction, including without limitation the rights
-#  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-#  copies of the Software, and to permit persons to whom the Software is
-#  furnished to do so, subject to the following conditions:
-# 
-# The above copyright notice and this permission notice shall be included in
-#  all copies or substantial portions of the Software.
-# 
-# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-#  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-#  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-#  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-#  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-#  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-#  THE SOFTWARE.
+# LICENSE: MIT
 
 from __future__ import division
 from ..supervised.classifier import normaliselabels
@@ -49,78 +32,51 @@ def foldgenerator(labels, nfolds=None, origins=None):
     Returns
     -------
     iterator over `train, test`, two boolean arrays
-
-    Bugs
-    ----
-    Algorithm is very naive w.r.t. unbalanced origins.
     '''
-    labels,_ = normaliselabels(labels)
-    nlabels = labels.max()+1
-    label_locations = [np.where(labels == i)[0] for i in xrange(nlabels)]
-    label_counts = np.array(map(len, label_locations))
-    if origins is not None:
-        origins = np.asanyarray(origins)
+    labels,names = normaliselabels(labels)
+    if origins is None:
+        origins = np.arange(len(labels))
+    else:
         if len(origins) != len(labels):
             raise ValueError(
              'milk.nfoldcrossvalidation.foldgenerator: origins must be of same size as labels')
-        label_counts_orig = np.zeros(nlabels, int)
-        label_origins = [[] for i in xrange(nlabels)]
-        counted = set()
-        for lab, orig in zip(labels, origins):
-            if orig in counted:
-                if orig not in label_origins[lab]:
-                    for other in xrange(nlabels):
-                        if other == lab: continue
-                        if orig in label_origins[other]:
-                            raise ValueError('milk.nfoldcrossvalidation.foldgenerator: origin %s seems to be present in two labels %s and %s' % (orig, lab, other))
-                    raise AssertionError('This should have been unreachable code')
-                continue
-            label_counts_orig[lab] += 1
-            label_origins[lab].append(orig)
-            counted.add(orig)
-        label_origins_counts = [np.cumsum([(origins == orig).sum() for orig in label_origins[lab]])
-                        for lab in xrange(nlabels)]
-    else:
-        label_counts_orig = label_counts
+        origins = np.asanyarray(origins)
+    fmin = len(labels)
+    for lab in set(labels):
+        curmin = len(set(origins[labels == lab]))
+        fmin = min(fmin, curmin)
 
-    if nfolds is None:
-        nfolds = min(label_counts_orig.min(), 10)
-    elif nfolds > label_counts_orig.min():
-        from warnings import warn
-        warn('milk.measures.nfoldcrossvalidation: Reducing the nr. of folds from %s to %s (minimum class size).' % (nfolds, label_counts_orig.min()))
-        nfolds = label_counts_orig.min()
-    if nfolds == 1:
-        note = ('(taking `origins` into account)' if origins is not None else '')
+    if fmin == 1:
         raise ValueError('''
 milk.nfoldcrossvalidation.foldgenerator: nfolds was reduced to 1 because minimum class size was 1.
-
 If you passed in an origins parameter, it might be caused by having a class come from a single origin.
+''')
 
-The class histogram %s looks like:
-%s''' % (note, label_counts_orig))
+    fold = np.zeros(len(labels))
+    fold -= 1
 
-    perfolds = (label_counts // nfolds)
-    assert perfolds.min() > 0
-    testing = np.zeros(len(labels), bool)
-    start = np.zeros(nlabels, int)
-    for fold in xrange(nfolds):
-        testing.fill(False)
-        end = start + perfolds
-        # We need to force the last fold to be past the end to avoid rounding errors
-        # missing some elements
-        if fold == (nfolds - 1):
-            end.fill(len(labels))
-        for i,locs,s,e in zip(xrange(nlabels), label_locations, start, end):
-            if origins is None:
-                testing[locs[s:e]] = 1
-            else:
-                s,e = np.searchsorted(label_origins_counts[i], (s,e))
-                assert s < e, 'milk.measures.nfoldcrossvalidation.foldgenerator: unexpected empty set!'
-                for included in label_origins[i][s:e]:
-                    testing[origins == included] = True
-        yield ~testing, testing
-        start = end
+    if nfolds is None:
+        nfolds = min(fmin, 10)
+    elif nfolds > fmin:
+        from warnings import warn
+        warn('milk.measures.nfoldcrossvalidation: Reducing the nr. of folds from %s to %s (minimum class size).' % (nfolds, fmin))
+        nfolds = fmin
 
+    for lab in set(labels):
+        locations = (labels == lab)
+        usedorigins = np.unique(origins[locations])
+        weights = np.array([np.sum(origins == orig) for orig in usedorigins])
+        foldweight = np.zeros(nfolds, int)
+        for w,orig in sorted(zip(weights, usedorigins)):
+            f = np.argmin(foldweight)
+            if np.any(fold[origins == orig] > -1):
+                raise ValueError(
+                        'milk.nfoldcrossvalidation.foldgenerator: something is wrong. Maybe origin %s is present in two labels.' % orig)
+            fold[origins == orig] = f
+            foldweight[f] += w
+
+    for f in xrange(nfolds):
+        yield (fold != f), (fold == f)
 
 def getfold(labels, fold, nfolds=None, origins=None):
     '''
